photo changed to png

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content />
         <meta name="author" content />
-        <link rel="icon" href="assets/icon.png">
+        <link rel="icon" href="assets/icon (1).png">
         <title>Contact - najeeb.life</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
