--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
         <meta name="author" content="Najeeb" />
         <meta name="keyword" content="najeeb ,mernstack,devoloper,Freelancer,Najeeb.life">
         <title>najeeb.life</title>
-        <link rel="icon" href=".assets/icon (1).png">
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" href="assets/icon (1).png">
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -59,7 +58,7 @@
                             <!-- Header profile picture-->
                             <div class="d-flex justify-content-center mt-5 mt-xxl-0">
                                 <div class="profile bg-gradient-primary-to-secondary">
-                                    <img class="profile-img" src=".assets/profile.png" alt="..." />
+                                    <img class="profile-img" src="assets/profile.png" alt="profile " />
                                     <div class="dots-1">
                                         <!-- SVG Dots-->
                                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 191.6 1215.4" style="enable-background: new 0 0 191.6 1215.4" xml:space="preserve">
